--- a/gateway/dstack-app/docker-compose.yaml
+++ b/gateway/dstack-app/docker-compose.yaml
@@ -2,19 +2,10 @@ services:
   gateway:
     build:
       context: .
-      dockerfile_inline: |
-        FROM rust:1.86.0@sha256:300ec56abce8cc9448ddea2172747d048ed902a3090e6b57babb2bf19f754081
-        WORKDIR /src
-        RUN apt-get update && apt-get install -y \
-            git build-essential libssl-dev protobuf-compiler \
-            libprotobuf-dev wireguard-tools iproute2 libclang-dev jq
-        RUN git clone https://github.com/Dstack-TEE/dstack.git && \
-            cd dstack && \
-            git checkout ${GIT_REV}
-        WORKDIR /src/dstack/gateway/dstack-app
-        RUN cargo build --release -p dstack-gateway
-        ENTRYPOINT ["/src/dstack/gateway/dstack-app/entrypoint.sh"]
-        CMD ["/src/dstack/target/release/dstack-gateway", "-c", "/data/gateway/gateway.toml"]
+      dockerfile: Dockerfile
+      args:
+        DSTACK_REV: ${GIT_REV}
+        SOURCE_DATE_EPOCH: ${SOURCE_DATE_EPOCH}
     volumes:
       - /var/run/dstack.sock:/var/run/dstack.sock
       - /dstack:/dstack
