gw: Update docker compose file

--- a/gateway/dstack-app/docker-compose.yaml
+++ b/gateway/dstack-app/docker-compose.yaml
@@ -1,11 +1,6 @@
 services:
   gateway:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        DSTACK_REV: ${GIT_REV}
-        SOURCE_DATE_EPOCH: ${SOURCE_DATE_EPOCH}
+    image: kvin/gateway@sha256:27fc6872836712c640d22397e4cf86c3e771ebed0116e075dca0eb170d9a9081
     volumes:
       - /var/run/dstack.sock:/var/run/dstack.sock
       - /dstack:/dstack
