--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Encifher <encifher@rizelabs.io>"]
 [dependencies]
 alloy = { workspace = true, features = ["signers", "signer-local"] }
 anyhow.workspace = true
+base64.workspace = true
 bon.workspace = true
 hex.workspace = true 
 http.workspace = true 
